--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ script:
 after_script:
   - git config --global user.email "travis@example.com"
   - git config --global user.name "travis"
-  - get checkout master
+  - git checkout master
   - git pulls update
   - git pulls list
   - git pulls merge $(git pulls list | awk 'NR==2' | awk {'print $1'})
